@@ -3,16 +3,20 @@ package com.example.demo.controllers;
 
 import com.example.demo.dtos.StudentDTO;
 import com.example.demo.models.Student;
+import com.example.demo.responses.StudentListResponse;
 import com.example.demo.responses.StudentResponse;
 import com.example.demo.services.StudentService;
 import jakarta.validation.Valid;
+import org.springdoc.api.OpenApiResourceNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.annotation.*;
 
+import java.awt.print.Pageable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -24,19 +28,20 @@ public class StudentController {
     @Autowired
     private StudentService studentService;
 
-    @GetMapping("/getAll")
-    public ResponseEntity<List<StudentResponse>> getAll() {
-        List<StudentResponse> list = studentService.showAll().stream()
-                .map(StudentResponse::mapToResponse)
+    @GetMapping("/students")
+    public ResponseEntity<List<StudentDTO>> getAllStudents() {
+        List<Student> students = studentService.showAll();
+        List<StudentDTO> responses = students.stream()
+                .map(StudentDTO::mapToStudentDTO)
                 .collect(Collectors.toList());
-        return ResponseEntity.ok().body(list);
+        return ResponseEntity.ok(responses);
     }
 
     @GetMapping("get/{id}")
-    public ResponseEntity<?> getByID(@PathVariable(name = "id") long id) {
+    public ResponseEntity<StudentResponse> getByID(@PathVariable(name = "id") long id) {
         Student student = studentService.findById(id);
         if (student == null){
-            return (ResponseEntity<?>) ResponseEntity.notFound();
+            throw new OpenApiResourceNotFoundException("Student not found with ID " + id);
         }
         return ResponseEntity.ok().body(StudentResponse.mapToResponse(student));
     }
@@ -47,7 +52,13 @@ public class StudentController {
             List<String> errors = result.getFieldErrors().stream().map(FieldError::getDefaultMessage).toList();
             return ResponseEntity.badRequest().body(errors);
         }
-        return ResponseEntity.ok().body(StudentResponse.mapToResponse(studentService.add(studentDTO));
+        Student student = studentService.add(studentDTO);
+        return ResponseEntity.ok().body(StudentResponse.builder()
+                .name(student.getName())
+                .city(student.getCity())
+                .dob(student.getDob())
+                .rank(student.getRank())
+                .build());
     }
 
     @DeleteMapping("delete/{id}")
@@ -70,11 +81,10 @@ public class StudentController {
     }
 
     @GetMapping("getPagination")
-    public ResponseEntity<List<StudentResponse>> getPagination(@RequestParam(name = "page") int page, @RequestParam(name = "size") int size) {
+    public ResponseEntity<StudentListResponse> getPagination(@RequestParam(name = "page") int page, @RequestParam(name = "size") int size) {
         PageRequest request = PageRequest.of(page,size);
-        List<StudentResponse> list = studentService.getPagination(request).stream()
-                .map(StudentResponse::mapToResponse)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok().body(list);
+        Page<Student> list = studentService.getPagination(request);
+        return ResponseEntity.ok().body(new StudentListResponse(list.getTotalPages(),list.stream()
+                .map(StudentDTO::mapToStudentDTO).toList()));
     }
 }
